log
Thu May 12 15:38:07 UTC 2022: 
 tests:  0|5
total_score: 0/70
4dd594f
Thu May 12 15:46:19 UTC 2022: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:54:9: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     list=n->sudo;
         ^
sudoku.c:55:5: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
     push_back(list);
     ^~~~~~~~~
     pushBack
cc1: all warnings being treated as errors
Compilation failed
d6fd0ce
Thu May 12 15:46:40 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:54:9: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     list=n->sudo;
         ^
sudoku.c:55:5: error: too few arguments to function ‘pushBack’
     pushBack(list);
     ^~~~~~~~
In file included from test.c:4:0:
list.h:23:6: note: declared here
 void pushBack(List* list, void* data);
      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0cf772a
Thu May 12 15:46:53 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:54:9: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     list=n->sudo;
         ^
sudoku.c:55:5: error: too few arguments to function ‘pushBack’
     pushBack();
     ^~~~~~~~
In file included from test.c:4:0:
list.h:23:6: note: declared here
 void pushBack(List* list, void* data);
      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
48d177a
Thu May 12 15:47:15 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:54:9: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     list=n->sudo;
         ^
cc1: all warnings being treated as errors
Compilation failed
31a9467
Thu May 12 15:50:32 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
749ba87
Thu May 12 15:52:18 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
bd96a99
Thu May 12 15:52:39 UTC 2022: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:55:8: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
       n=1;
        ^
cc1: all warnings being treated as errors
Compilation failed
aeafdf7
Thu May 12 15:52:53 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:55:14: error: assignment to expression with array type
       n->sudo=1;
              ^
Compilation failed
b893d77
Thu May 12 15:53:11 UTC 2022: 
 sudoku.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|5
total_score: 0/70
f79b95f
Thu May 12 15:53:49 UTC 2022: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:56:5: error: expected ‘;’ before ‘return’
     return list;
     ^~~~~~
sudoku.c:57:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
47b8b21
Thu May 12 15:54:00 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
a5db533
Thu May 12 15:55:05 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:55:5: error: too many arguments to function ‘popBack’
     popBack(list, n);
     ^~~~~~~
In file included from test.c:4:0:
list.h:21:6: note: declared here
 void popBack(List* list);
      ^~~~~~~
Compilation failed
9b77cfe
Thu May 12 15:55:16 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
e6b3e04
Thu May 12 15:55:27 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
0440f9c
Thu May 12 15:56:10 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
963e9b9
Thu May 12 15:56:25 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
183067e
Thu May 12 15:56:40 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
620b44b
Thu May 12 15:57:22 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
bd2fd5c
Thu May 12 15:57:51 UTC 2022: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
9c408b0
Thu May 12 15:58:04 UTC 2022: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
4202b19
Thu May 12 16:04:16 UTC 2022: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
ed06077
Thu May 12 16:07:45 UTC 2022: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:57:14: error: assignment to expression with array type
       i->sudo=1;
              ^
Compilation failed
3d86847
Thu May 12 16:26:33 UTC 2022: 
 sudoku.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:59:9: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
         if(i->sudo[a][b]==0)
         ^~
sudoku.c:61:11: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
           cont++;
           ^~~~
cc1: all warnings being treated as errors
Compilation failed
c06b3b2
Thu May 12 16:27:13 UTC 2022: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
1ec2ca9
Thu May 12 16:28:59 UTC 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:60:18: error: assignment to expression with array type
           i->sudo=cont;
                  ^
Compilation failed
96739f1
Thu May 12 16:29:12 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:60:12: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
           i=cont;
            ^
cc1: all warnings being treated as errors
Compilation failed
571d4b1
Thu May 12 16:29:36 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:60:18: error: assignment to expression with array type
           i->sudo=cont;
                  ^
Compilation failed
9e46509
Thu May 12 16:30:11 UTC 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
e0d9676
Thu May 12 16:30:36 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
d9b6fd1
Thu May 12 16:31:00 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
cbd0fe9
Thu May 12 16:32:53 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
4a6bb7a
